--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2",
-    "react-scripts": "^3.4.4",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "^2.1.3",
+    "react-scroll": "^1.8.4",
+    "react-scroll-motion": "^0.2.1",
     "swiper": "^7.3.1",
     "uuidv4": "^6.2.12",
     "web-vitals": "^1.1.2"
